--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,4 @@
-   /* Estilos CSS para el footer */
-   body {
+body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -50,7 +49,21 @@ footer {
 .social-icons a:hover {
     color: #fca311; /* Cambia el color al pasar el mouse */
 }
-.icon-img {
-    width: 32px; /* Cambia el ancho según tus necesidades */
-    height: 32px; /* Cambia la altura según tus necesidades */
+.footer-links {
+    margin: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-links a {
+    color: #ffffff;
+    text-decoration: none;
+    margin: 0 10px;
+    font-size: 14px;
+}
+.footer-links :hover {
+    background-color: #fca311; /* Cambia el color al pasar el mouse */
+    border-radius: 5px;
 }
