--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,5 @@
-body {
+   /* Estilos CSS para el footer */
+   body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -49,21 +50,7 @@ footer {
 .social-icons a:hover {
     color: #fca311; /* Cambia el color al pasar el mouse */
 }
-.footer-links {
-    margin: 5px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer-links a {
-    color: #ffffff;
-    text-decoration: none;
-    margin: 0 10px;
-    font-size: 14px;
-}
-.footer-links :hover {
-    background-color: #fca311; /* Cambia el color al pasar el mouse */
-    border-radius: 5px;
+.icon-img {
+    width: 32px; /* Cambia el ancho según tus necesidades */
+    height: 32px; /* Cambia la altura según tus necesidades */
 }
